--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1316,7 +1316,7 @@ input, select, textarea {
 		-moz-background-size: cover; 
 		-o-background-size: cover; 
 		background-size: cover;
-		background-attachment: fixed;
+		background-attachment: scroll;
 		overflow-y: scroll;
 	}
 
