--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,7 +1306,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: url(image url) no-repeat center center fixed;
+		background: url("images/bg.jpg") no-repeat center center fixed;
     		-webkit-background-size: cover;
     		-moz-background-size: cover;
     		-o-background-size: cover;
