--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,13 +1306,19 @@ input, select, textarea {
 	}
 
 	body {
-		background: url("images/bg.jpg") no-repeat center center fixed;
+		background-image: url("images/bg.jpg");
     		-webkit-background-size: cover;
     		-moz-background-size: cover;
     		-o-background-size: cover;
-    		background-size: cover;
-    		height: 100%;
-    		overflow: hidden;
+		background-repeat: repeat, no repeat;
+		background-size: auto, 100% 100%;
+		-webkit-background-size: cover; 
+		-moz-background-size: cover; 
+		-o-background-size: cover; 
+		background-size: cover;
+		background-attachment: scroll;
+		max-height: 100vh;
+		overflow-y: scroll;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
