--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1308,7 +1308,8 @@ input, select, textarea {
 	body {
 		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
-		background-size: auto, 100% 100%;
+		background-position: center center;
+		background-size: cover;
 		background-attachment: scroll;
 		overflow-y: scroll;
 	}
