--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1310,7 +1310,7 @@ input, select, textarea {
 		background-repeat: repeat, no-repeat;
 		background-position: center center;
 		background-size: cover;
-		background-attachment: scroll;
+		background-attachment: fixed;
 		overflow-y: scroll;
 	}
 
