--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1308,9 +1308,8 @@ input, select, textarea {
 	body {
 		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
-		background-position: center center;
 		background-size: cover;
-		background-attachment: fixed;
+		background-attachment: scroll;
 		overflow-y: scroll;
 	}
 
