--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1309,7 +1309,7 @@ input, select, textarea {
 		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
 		background-size: auto 100%;
-		background-attachment: scroll;
+		background-attachment: fixed;
 		overflow-y: scroll;
 	}
 
