--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,33 +1306,8 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url("images/overlay.png"), url("images/bg.jpg");
-		background-repeat: repeat, no-repeat;
-		background-size: auto, 100% 100%;
-		background-attachment: fixed;
-		overflow-y: scroll;
-	}
-
-	img.bg {
-	  /* Set rules to fill background */
-	  min-height: 100%;
-	  min-width: 1024px;
-
-	  /* Set up proportionate scaling */
-	  width: 100%;
-	  height: auto;
-
-	  /* Set up positioning */
-	  position: fixed;
-	  top: 0;
-	  left: 0;
-	}
-
-	@media screen and (max-width: 1024px) { /* Specific to this particular image */
-	  img.bg {
-	    left: 50%;
-	    margin-left: -512px;   /* 50% */
-	  }
+		background-color: #8EC5FC;
+		background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
