--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,8 +1306,12 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #8EC5FC;
-		background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+		background-color: #313a3d;
+		background-attachment: fixed,						fixed;
+		background-image: url("images/overlay.png"), url("images/bg.jpg");
+		background-position: top left,					center center;
+		background-repeat: repeat,						none;
+		background-size: auto,						cover;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
